unified_tests/literals/list_literal_incomplete_binary_expression/expect/build.text.stderr
lib.copp:2:16: error: expected expression
      _x := [1 + ]
                 ^
